--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <link rel="stylesheet" href="style.css">
     <title>My Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Victoria is gay </h1>
+    <a href=  "https://andesjoshua.github.io/prework-website-project/">HOME</a>
     <script src="script.js"></script> 
   </body>
 </html> 
