Updated text on BIO page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>HOME</h1>
     <a href=  "https://andesjoshua.github.io/prework-website-project/">HOME</a>
     <a href= "projects.html">PROJECTS</a>
-    <a href= "bio.html">BIO</a>
+    <a href= "bio.html">ABOUT</a>
     <script src="script.js"></script> 
   </body>
 </html> 
