--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <h1>PROJECTS</h1>
     <a href=  "https://andesjoshua.github.io/prework-website-project/">HOME</a>
     <a href= "projects.html">PROJECTS</a>
-    <a href= "bio.html">BIO</a>
+    <a href= "bio.html">ABOUT</a>
     <table style="width:1420px">
         <tr>
           <th>Alogrithms</th>
